--- a/组件化网页开发/电商网页/components/dropdown.html
+++ b/组件化网页开发/电商网页/components/dropdown.html
@@ -2,7 +2,7 @@
  * @Author: YXS
  * @Date: 2020-07-06 16:48:40
  * @LastEditors: YXS
- * @LastEditTime: 2020-07-13 10:48:07
+ * @LastEditTime: 2020-07-13 11:14:00
  * @Description: 下拉菜单组件
 -->
 <!DOCTYPE html>
@@ -58,7 +58,7 @@
           }
           $layer.html(html);
           $this.data('loaded', true);
-        }, 1000);
+        }, 100);
         });
       }
     });
@@ -67,7 +67,7 @@
       delay: 200,
       // event: 'click'
       // js: true,
-      // animation: 'slideUpDown'
+      animation: 'slideUpDown'
     })
     $('#btn-show').on('click', function() {
       console.log('show')
