--- a/组件化网页开发/电商网页/css/common.css
+++ b/组件化网页开发/电商网页/css/common.css
@@ -7,7 +7,7 @@ a.link {
   color: #4d555d;
 }
 a.link:hover {
-  color: #f01414;
+  color: #f01414 !important;
 }
 /**
  * @Author: YXS
@@ -18,7 +18,6 @@ a.link:hover {
 }
 .dropdown-toggle {
   position: relative;
-  display: block;
   z-index: 2;
 }
 .dropdown-arrow {
@@ -69,6 +68,7 @@ a.link:hover {
 }
 .menu .dropdown-layer {
   top: 43px;
+  /* height: 100%; */
   background-color: #fff;
   border: 1px solid #cdd0d4;
 }
@@ -77,7 +77,7 @@ a.link:hover {
   height: 30px;
   line-height: 30px;
   color: #4d555d;
-  white-space: no-repeat;
+  white-space: nowrap;
   padding: 0 12px;
 }
 .menu .menu-item:hover {
